<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:background="@color/grey"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/notes_title"
        android:text="@string/add_note"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notes_title"
        android:id="@+id/notes_input"
        android:hint="@string/note"
        android:textSize="13sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white">
        <requestFocus/><!--request the foucus-->
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notes_input"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:id="@+id/notes_cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/record_btn"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_weight="1"
            android:id="@+id/notes_done"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:background="@drawable/record_btn"/>

    </LinearLayout>


</RelativeLayout>