<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calendar_date"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_input_time"
        android:padding="20dp"
        android:textSize="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/grey"
        android:padding="13dp">
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_hour"
            android:maxLength="2"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" : "
            android:textSize="20dp"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/calendar_min"
            android:maxLength="2"
            android:inputType="number"/>


    </LinearLayout>
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_gravity="right"
    android:orientation="horizontal">
    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/calendar_cancel"
        android:text="@string/cancel"
        android:textColor="@color/grey"
        android:background="@drawable/record_btn"
        android:layout_marginRight="20dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/calendar_done"
        android:text="@string/done"
        android:textColor="@color/grey"
        android:background="@drawable/record_btn"
        android:layout_marginRight="20dp"/>

</LinearLayout>



</LinearLayout>