<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Index">
    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/index_content"/>

    <!--reference 7-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:background="@color/grey"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/index_page1"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/index_btn_detail"
                android:src="@mipmap/detail_na"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/index_detail"
                android:text="@string/details"
                android:layout_below="@id/index_btn_detail"/>



        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/index_page2"

            android:gravity="center"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/index_btn_chart"
                android:src="@mipmap/chart_na"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/index_chart"
                android:text="@string/chart"
                android:layout_below="@id/index_btn_chart"/>



        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/index_page3"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/index_btn_history"
                android:layout_marginLeft="25dp"
                android:src="@mipmap/calendar_na"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/index_history"
                android:text="@string/history_record"
                android:layout_below="@id/index_btn_history"/>



        </RelativeLayout>

    </LinearLayout>


</LinearLayout>