<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChartAnalysis"
    android:background="@color/grey">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/history_header"
        >
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/backspace"
            android:id="@+id/chart_back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_analysis"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/calendar"
            android:layout_alignParentRight="true"
            android:id="@+id/chart_calendar"/>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/chart_info_bg"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The Bills of the 2020.11"
            android:id="@+id/chart_date"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Expense: $ 22.0"
            android:textSize="12sp"
            android:textStyle="bold"
            android:id="@+id/chart_expense"
            android:layout_marginTop="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Income: $ 22.0"
            android:textSize="12sp"
            android:textStyle="bold"
            android:id="@+id/chart_income"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_expense"
            android:backgroundTint="@null"
            android:id="@+id/chart_expense_btn"
            android:background="@drawable/chart_btn_activate"
            android:textColor="@color/orange"
            android:textAllCaps="false"
            android:textStyle="bold"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chart_income_btn"
            android:text="@string/month_income"
            android:background="@drawable/chart_btn"
            android:layout_marginLeft="10dp"
            android:textAllCaps="false"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chart_analysis"/>


</LinearLayout>